--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "gsap": "^3.13.0",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.522.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
